Spacing issues fixed with input widths

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@ body{
     height: 100%;
 }
 
+h3{
+    padding-left: 15px;
+    font-size: 2em!important;
+    font-weight: 700!important;
+    }
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
@@ -105,7 +111,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-input{
+.pops{
     width: 400px;
 }
 
@@ -146,6 +152,7 @@ input{
     position: absolute!important;
     z-index: 499;
     width: 400px!important;
+    margin-left: auto!important;
 }
 
 
@@ -154,8 +161,7 @@ input{
 
 .displayfirst{
     position: absolute!important;
-    width: 400px!important;
-    background-color: blue;
+    width: 420px!important;
     z-index: 500;
     margin-left: -500px;
 }
